v2.5.2
Run on Minecraft 1.13 through 26.3 again, each on its own Java version.

Since 2.3 the plugin declared api-version 1.21 and was built for Java 17,
so it would not load on anything older than 1.21 despite being listed
for 1.13+. It now targets Java 8 and api-version 1.13.

- ServerCompat picks the best resource pack API the server has: pack ids
  and stacking (1.20.3+), prompt and required flag (1.18+), else url+hash;
  status events without ids match the single pending enforced pack.
- Merged packs name the server's own format in pack_format; pre-1.20
  servers get pack_format only (the range fields are rejected there).
- Replace Java 9+ language and library features (records, switch
  expressions, pattern matching, List.of, isBlank, ...).
- README: supported versions and version-dependent behaviour.

Tested with protocol-level bots on Paper 1.13.2, 1.14.4, 1.15.2, 1.16.5
(Java 8), 1.17.1-1.20.4 (Java 17), 1.20.6-1.21.11 (Java 21) and 26.3.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DRsmM6VxiRYFamUnEVKqZr